--- a/alarm-handler/plugin/pom.xml
+++ b/alarm-handler/plugin/pom.xml
@@ -3,23 +3,26 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>quick-alarm</artifactId>
+        <artifactId>alarm-handler</artifactId>
         <groupId>com.dingxiang.alarm</groupId>
         <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>common</artifactId>
-    <version>1.0</version>
+    <artifactId>plugin</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>email-plugin</module>
+        <module>dingding-plugin</module>
+        <module>feishu-plugin</module>
+    </modules>
+
     <dependencies>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <scope>test</scope>
+            <groupId>com.dingxiang.alarm</groupId>
+            <artifactId>core</artifactId>
+            <version>1.0</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
