--- a/alarm-recevicer/pom.xml
+++ b/alarm-recevicer/pom.xml
@@ -3,15 +3,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.dingxiang.alarm</groupId>
-    <artifactId>alarm-recevicer</artifactId>
-    <version>1.0</version>
 
     <parent>
         <artifactId>quick-alarm</artifactId>
         <groupId>com.dingxiang.alarm</groupId>
         <version>1.0</version>
     </parent>
+
+    <artifactId>alarm-recevicer</artifactId>
+    <version>1.0</version>
 
     <dependencies>
         <dependency>
@@ -44,9 +44,17 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.dingxiang.alarm</groupId>
+            <artifactId>alarm-handler</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
+        <finalName>alarm-system</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -60,6 +68,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring.version}</version>
                 <configuration>
                     <excludes>
                         <exclude>
