--- a/pom.xml
+++ b/pom.xml
@@ -16,11 +16,8 @@
     <packaging>pom</packaging>
     <version>1.0</version>
     <modules>
-        <module>common</module>
-        <module>core</module>
-        <module>plugin</module>
-        <module>example</module>
         <module>alarm-recevicer</module>
+        <module>alarm-handler</module>
     </modules>
 
     <properties>
